[package]
name = "rustscan-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "2"
indicatif = "0.17"
tokio = { version = "1.36", features = ["full"] }
ipnet = "2.9"

serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
